[package]
name = "applic"
version = "0.1.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.38", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.21"
